--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "@dhis2/d2-ui-header-bar": "^5.0.18",
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "bootstrap": "^4.1.3",
@@ -40,6 +41,7 @@
     "autoprefixer": "^9.3.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "dhis2-header-vue": "^1.1.7",
     "growl": "^1.10.5",
     "https-proxy-agent": "^2.2.1",
     "node-sass": "^4.10.0",
