--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "flag-icon-css": "^3.2.0",
     "font-awesome": "^4.7.0",
     "highcharts": "^6.2.0",
+    "highcharts-3d": "^0.1.7",
     "highcharts-custom-events": "^2.2.2",
     "highcharts-vue": "^1.2.0",
     "perfect-scrollbar": "^1.4.0",
