--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0-rc.11",
+    "bootstrap-vue": "^2.0.0",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.7",
     "css-vars-ponyfill": "^1.15.0",
@@ -30,7 +30,7 @@
     "vue": "^2.5.17",
     "vue-chartjs": "^3.4.0",
     "vue-perfect-scrollbar": "^0.1.0",
-    "vue-router": "^3.0.1",
+    "vue-router": "^3.1.3",
     "webpack": "^4.10.0"
   },
   "devDependencies": {
@@ -42,7 +42,7 @@
     "@vue/test-utils": "^1.0.0-beta.25",
     "autoprefixer": "^9.3.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^25.0.0",
     "dhis2-header-vue": "^1.1.7",
     "growl": "^1.10.5",
     "https-proxy-agent": "^2.2.1",
